updating spacing for pulled margin media elements to prevent fixed secondary nav from overlapping content

--- a/wp-content/themes/skeleton-theme/assets/styles/screen.css
+++ b/wp-content/themes/skeleton-theme/assets/styles/screen.css
@@ -391,7 +391,7 @@ img {
     text-align: left;
 }
 
-.media-pull-left { margin-left: -30px; }
+.media-pull-left { margin-left: -10px; }
 
 .media-push-right { margin-right: 200px; }
 
